[gd_scene load_steps=4 format=3 uid="uid://dcx5ubu0cm2nd"]

[ext_resource type="Script" path="res://Scripts/shop_item.gd" id="1_wmngb"]
[ext_resource type="Texture2D" uid="uid://wkhbtxh47vya" path="res://Assets/Sprites/seed1.png" id="2_4lkpc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3v5y3"]
size = Vector2(40, 52)

[node name="Item" type="Area2D" groups=["purchaseable"]]
position = Vector2(47, 121)
script = ExtResource("1_wmngb")
price = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3v5y3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_4lkpc")

[node name="Price" type="Label" parent="."]
offset_left = -20.0
offset_top = 22.0
offset_right = 20.0
offset_bottom = 48.0
horizontal_alignment = 1

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
